--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ __pycache__/
 *.pyc
 .env
 etl/medical_cost_model.joblib
-streamlit/secrets.tomletl/medical_cost_model.joblib
+streamlit/secrets.toml
